<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_scan"
        style="@style/base_tb" >
        <ImageButton
            android:id="@+id/ib_nav_lit"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:onClick="back"
            android:src="@mipmap/nav_back" />

        <TextView
            style="@style/base_tv"
            android:text="@string/scan_tb_title"
            android:textColor="@color/colorWhite"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/base_tv"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:text="当前供应商：" />

        <TextView
            android:id="@+id/tv_supplier"
            style="@style/base_tv"
            android:layout_width="match_parent"
            android:text=""
            android:textSize="16sp"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/base_tv"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:text="当前医院：" />

        <TextView
            android:id="@+id/tv_hospital"
            style="@style/base_tv"
            android:layout_width="match_parent"
            android:text=""
            android:textSize="16sp"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/base_tv"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:text="当前科室：" />

        <TextView
            android:id="@+id/tv_office"
            style="@style/base_tv"
            android:layout_width="match_parent"
            android:text=""
            android:textSize="16sp"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/base_tv"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:text="当前洗涤厂：" />

        <TextView
            android:id="@+id/tv_wash_factory"
            style="@style/base_tv"
            android:layout_width="match_parent"
            android:text=""
            android:textSize="16sp"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/base_tv"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:text="当前类型：" />

        <TextView
            android:id="@+id/tv_linen_type"
            style="@style/base_tv"
            android:layout_width="match_parent"
            android:text=""
            android:textSize="16sp"
            android:textColor="@color/colorAccent" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.yyyu.baselibrary.view.WhewView
            android:id="@+id/wv_scan"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.yyyu.baselibrary.view.RoundImageView2
            android:id="@+id/my_photo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_launcher"
            imagecontrol:border_inside_color="#bc0978"
            imagecontrol:border_outside_color="#ba3456" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/my_photo"
            android:layout_toEndOf="@+id/my_photo"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:textColor="@color/colorAccent"
            android:id="@+id/tv_tag_num" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_start"
        style="@style/base_btn"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="startScan"
        android:text="@string/scan_start" />

    <Button
        android:id="@+id/btn_stop"
        style="@style/base_btn"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="20dp"
        android:onClick="stopScan"
        android:text="@string/scan_stop" />
</LinearLayout>